--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ozone4real/grpc-node#readme",
   "dependencies": {
+    "@grpc/proto-loader": "^0.5.5",
     "google-protobuf": "^4.0.0-rc.2",
     "grpc": "^1.24.3"
   }
